--- a/planner.html
+++ b/planner.html
@@ -4,187 +4,195 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Plan My Next Trip</title>
+
+  <!-- Fonts & Icons -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-  <style>
-	body {
-			margin: 0;
-			font-family: 'Poppins', -apple-system, BlinkMacSystemFont, sans-serif;
-			background: linear-gradient(180deg, #c2e9fb 0%, #a1c4fd 50%, #fbc2eb 100%);
-			background-attachment: fixed;
-			background-repeat: no-repeat;
-			background-size: cover;
-			color: white;
-			padding: 2rem;
-			min-height: 100vh;
-			text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
-		}
 
-  .main-container {
-    width: 100%;
-    max-width: 700px;
-    margin: 0 auto;
-    padding: 1.5rem;
-  }
+  <!-- 🌓 Instant theme hint (prevents flash on dark users) -->
+  <script>
+  (function () {
+    try {
+      const cached = localStorage.getItem('ec_dark');
+      const prefersDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
+      if (cached === 'true' || (cached === null && prefersDark)) {
+        document.documentElement.classList.add('dark');
+      }
+    } catch {}
+  })();
+  </script>
 
-#header {
-  position: sticky;
-  top: 0;
-  background-color: rgba(255, 255, 255, 0.15);
-  backdrop-filter: blur(8px);
-  -webkit-backdrop-filter: blur(8px);
-  padding: 0.75rem 1rem;
-  z-index: 10;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-}
-
-#page-title {
-  font-size: 1.5rem;
-  font-weight: 600;
-  margin-top: 1rem;
-  text-align: center;
+<style>
+/* ===== Page background & mural ===== */
+body {
+  margin: 0;
+  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, sans-serif;
+  background: linear-gradient(180deg, #c2e9fb 0%, #a1c4fd 50%, #fbc2eb 100%);
   color: white;
+  padding: 2rem;
+  min-height: 100vh;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
+  overflow-x: hidden;
+}
+body::before{
+  content:"";
+  position:fixed; inset:0;
+  background:url('Mural.PNG') no-repeat center top;
+  background-size:contain;
+  opacity:.2; pointer-events:none; z-index:0;
+}
+body > * { position:relative; z-index:1; }
+
+/* ===== Layout ===== */
+.main-container{
+  width: 90%;
+  max-width: 700px;
+  margin: 0 auto;
+  padding: 1.5rem;
 }
 
-		.explore-button {
-			background-color: #ffffff;
-			color: #2f77a7;
-			padding: 0.5rem 1rem;
-			border-radius: 8px;
-			font-weight: bold;
-			text-decoration: none;
-			display: inline-block;
-			margin-top: 0.5rem;
-			width: auto;
-		}
+/* Sticky, frosted header (matches checklist/home) */
+#header{
+  position:sticky; top:0;
+  background-color:rgba(255,255,255,0.15);
+  backdrop-filter:blur(8px); -webkit-backdrop-filter:blur(8px);
+  padding:.75rem 1rem; z-index:10;
+  border-bottom:1px solid rgba(255,255,255,0.3);
+  border-radius:12px;
+  display:flex; align-items:center; gap:.75rem;
+}
+#page-title{
+  margin:0.5rem auto 0;
+  font-size:1.5rem; font-weight:600;
+  text-align:center; color:white;
+}
 
-  .explore-button i {
-    margin-right: 0.3rem;
-  }
+/* ===== Frosted sections / cards ===== */
+.section,
+.card{
+  background: rgba(255,255,255,0.15);
+  backdrop-filter: blur(8px); -webkit-backdrop-filter: blur(8px);
+  padding: 1rem;
+  margin: 1rem 0;
+  border-radius: 12px;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+  text-align: center; /* center all text/content */
+}
+.section h2, .card h2{
+  margin: 0 0 .5rem;
+  font-size: 1.2rem; font-weight: 600; color: white;
+}
+.section p, .section label, .section em,
+.card p, .card label{
+  color: rgba(255,255,255,0.95); text-shadow: none;
+}
 
-  .section {
-    background: rgba(255, 255, 255, 0.25);
-    padding: 1rem;
-    margin: 1rem 0;
-    border-radius: 12px;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-  }
+/* Saved trip “cards” inside the section */
+.trip-card{
+  background: rgba(255,255,255,0.12);
+  backdrop-filter: blur(8px); -webkit-backdrop-filter: blur(8px);
+  border-radius:10px; padding:1rem; margin-top:1rem;
+  box-shadow:0 2px 6px rgba(0,0,0,0.15);
+  color:white; text-align:center;
+}
+.trip-card h3{ margin:.25rem 0 .25rem; }
+.trip-card .btn{ margin-top:.5rem; }
 
-  .section h2 {
-    margin-top: 0;
-    font-size: 1.2rem;
-    font-weight: 600;
-  }
+/* Inputs */
+input[type="date"]{
+  width:100%; padding:.6rem; border-radius:8px; border:none; font-size:1rem;
+}
 
-  label {
-    font-weight: 500;
-    margin-bottom: 0.25rem;
-    display: block;
-  }
+/* ===== Buttons ===== */
+.btn{
+  background:#ffffff; color:#2f77a7;
+  padding:0.6rem 1rem;
+  border-radius:8px; font-weight:700;
+  text-decoration:none; border:none; cursor:pointer;
+  display:inline-flex; align-items:center; justify-content:center; gap:.5rem;
+  box-shadow:0 4px 10px rgba(0,0,0,.15);
+  width:100%; max-width:300px; /* primary button size */
+}
+.btn i{ margin-right:.35rem; }
 
-  input[type="date"] {
-    width: 100%;
-    padding: 0.6rem;
-    border-radius: 8px;
-    border: none;
-    font-size: 1rem;
-  }
+/* Compact header button */
+.btn-sm{
+  padding:.45rem .8rem;
+  width:auto; max-width:none;
+  font-weight:700;
+}
 
-  button {
-    background-color: #ffffff;
-    color: #2f77a7;
-    font-weight: bold;
-    border: none;
-    padding: 0.5rem 1rem;
-    border-radius: 8px;
-    margin-top: 0.75rem;
-    cursor: pointer;
-    font-size: 1rem;
-    width: 100%;
-  }
+.section .btn {
+  max-width: 300px;
+  margin: 0 auto;
+  display: block;
+  font-size: 1.1rem; /* optional to make text feel bigger */
+  padding: 0.8rem 1.2rem; /* slightly taller button */
+}
 
-  button i {
-    margin-right: 0.5rem;
-  }
+/* ===== Dark mode ===== */
+body.dark{ background:#121212; color:white; }
+body.dark .section,
+body.dark .card,
+body.dark .trip-card{
+  background: rgba(255,255,255,0.08);
+  border: 1px solid rgba(255,255,255,0.18);
+}
+body.dark .btn{ background:#ffffff; color:#2f77a7; } /* keep buttons consistent */
 
-  .trip-card {
-    background: rgba(255, 255, 255, 0.8);
-    padding: 1rem;
-    border-radius: 10px;
-    margin-top: 1rem;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.15);
-  }
-
-  .trip-card h3 {
-    margin-top: 0;
-  }
-
-  .trip-card button {
-    margin-top: 0.5rem;
-  }
-
-  em {
-    font-size: 0.9rem;
-    color: #333;
-    text-shadow: none;
-  }
-
-  body.dark {
-    background: #121212;
-    color: white;
-  }
-
-  body.dark .section {
-    background: rgba(255,255,255,0.05);
-  }
-
-  body.dark button {
-    background: #333;
-    color: white;
-  }
-  </style>
+/* Optional: dark-mode mural becomes a white mask (matches other pages) */
+html.dark body::before,
+body.dark::before{
+  -webkit-mask-image:url('Mural.PNG'); mask-image:url('Mural.PNG');
+  -webkit-mask-repeat:no-repeat; mask-repeat:no-repeat;
+  -webkit-mask-position:center top; mask-position:center top;
+  -webkit-mask-size:contain; mask-size:contain;
+  background-color:rgba(255,255,255,0.3);
+  opacity:1; background-image:none;
+}
+</style>
 </head>
-<body style="display: none;">
-  <div class="main-container" id="mainContent" style="display: none;">
+
+<body style="display:none;">
+  <div class="main-container" id="mainContent" style="display:none;">
     <div id="header">
-  <button id="back-button" class="explore-button" aria-label="Go back">
-				<i class="fas fa-arrow-left" style="margin-right: 0.5rem;"></i> Back
-			</button>
-      <h2 id="page-title" style="margin: 0.5rem 0 0.25rem 0;">Plan My Next Trip</h2>
+      <button id="back-button" class="btn btn-sm" aria-label="Go back">
+  <i class="fas fa-arrow-left"></i> Back
+</button>
+      <h2 id="page-title">Plan My Next Trip</h2>
     </div>
 
-    <!-- 🔽 Rest of your sections follow here -->
+<!-- Trip Countdown -->
+<div class="section">
+  <h2>Trip Countdown</h2>
+  <label for="tripDate">Trip Start Date</label>
+  <input type="date" id="tripDate" />
+  <p id="daysUntil" style="font-size:1.05rem; margin:.5rem 0 0;"></p>
+</div>
 
-  <!-- Trip Countdown -->
-  <div class="section">
-    <h2>Trip Countdown</h2>
-    <label for="tripDate">Trip Start Date:</label>
-    <input type="date" id="tripDate" />
-    <p id="daysUntil" style="font-size: 1.1rem;"></p>
-  </div>
+<!-- Saved Trips -->
+<div class="section">
+  <h2>Your Saved Trips</h2>
+  <div id="savedTrips"></div>
+</div>
 
-  <!-- Saved Trips -->
-  <div class="section">
-    <h2>Your Saved Trips</h2>
-    <div id="savedTrips"></div>
-  </div>
+<!-- Create a New Trip -->
+<div class="section">
+  <h2>Create a New Trip</h2>
+  <p>Plan out park days and saved tasks for your next adventure!</p>
+  <button class="btn" onclick="window.location.href='builder.html'">
+    <i class="fas fa-calendar-check"></i> Plan My Trip
+  </button>
+</div>
 
-  <!-- Create a New Trip -->
-  <div class="section">
-    <h2>Create a New Trip</h2>
-    <p>Plan out park days and saved tasks for your next adventure!</p>
-    <button onclick="window.location.href='builder.html'">
-      <i class="fas fa-calendar-check"></i> Plan My Trip
-    </button>
-  </div>
-
-  <!-- Packing -->
-  <div class="section">
-    <h2>Packing & Prep List</h2>
-    <p>Plan what to bring and check off pre-trip tasks.</p>
-    <button onclick="window.location.href='pack.html'">
-      <i class="fas fa-suitcase-rolling"></i> Go to Packing List
-    </button>
+<!-- Packing -->
+<div class="section">
+  <h2>Packing and Prep List</h2>
+  <p>Plan what to bring and check off pre-trip tasks.</p>
+  <button class="btn" onclick="window.location.href='pack.html'">
+    <i class="fas fa-suitcase-rolling"></i> Go to Packing List
+  </button>
+</div>
   </div>
 
   <!-- 🔧 Firebase & Countdown Script -->
@@ -193,6 +201,7 @@
     import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-auth.js";
     import { getFirestore, getDoc, getDocs, setDoc, deleteDoc, collection, doc } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-firestore.js";
 
+    // 🔥 Firebase
     const firebaseConfig = {
       apiKey: "AIzaSyDLDycGnK6Nm8m5KqbhhPSKz7GNb3PjZCo",
       authDomain: "the-enchanted-checklist.firebaseapp.com",
@@ -201,95 +210,115 @@
       messagingSenderId: "971177969419",
       appId: "1:971177969419:web:3a48e119cb866f6551840e"
     };
-
-    const app = initializeApp(firebaseConfig);
+    const app  = initializeApp(firebaseConfig);
     const auth = getAuth(app);
-    const db = getFirestore(app);
+    const db   = getFirestore(app);
 
+    // DOM refs
     const tripDateInput = document.getElementById("tripDate");
-    const daysUntil = document.getElementById("daysUntil");
+    const daysUntil     = document.getElementById("daysUntil");
     const savedTripsDiv = document.getElementById("savedTrips");
 
+    // 🔐 Auth guard + no-flash theme apply
     onAuthStateChanged(auth, async user => {
-      if (!user) return;
+      if (!user) { window.location.href = "index.html"; return; }
 
-      document.body.style.display = "block";
-document.getElementById("mainContent").style.display = "block";
+      // Load prefs early
+      try {
+        const prefsSnap = await getDoc(doc(db, `users/${user.uid}/preferences/default`));
+        const prefs = prefsSnap.exists() ? prefsSnap.data() : {};
 
-      const prefsSnap = await getDoc(doc(db, `users/${user.uid}/preferences/default`));
-      if (prefsSnap.exists()) {
-        const prefs = prefsSnap.data();
+        // Apply dark before reveal & cache for next load
+        if (prefs.dark_mode === true) {
+          document.body.classList.add("dark");
+          try { localStorage.setItem('ec_dark', 'true'); } catch {}
+        } else {
+          document.body.classList.remove("dark");
+          try { localStorage.setItem('ec_dark', 'false'); } catch {}
+        }
+
+        // reveal UI after theme
+        document.body.style.display = "block";
+        document.getElementById("mainContent").style.display = "block";
+
+        // Trip date
         if (prefs.tripStartDate) {
           tripDateInput.value = prefs.tripStartDate;
           updateCountdown(prefs.tripStartDate);
         }
-        if (prefs.dark_mode === true) {
-          document.body.classList.add("dark");
-        }
-      }
 
-      tripDateInput.addEventListener("change", async () => {
-        const selectedDate = tripDateInput.value;
-        if (selectedDate) {
-          await setDoc(doc(db, `users/${user.uid}/preferences/default`), {
-            tripStartDate: selectedDate
-          }, { merge: true });
+        // Listen for changes
+        tripDateInput.addEventListener("change", async () => {
+          const selectedDate = tripDateInput.value;
+          if (!selectedDate) return;
+          await setDoc(doc(db, `users/${user.uid}/preferences/default`), { tripStartDate: selectedDate }, { merge: true });
           updateCountdown(selectedDate);
-        }
-      });
-
-      const tripSnap = await getDocs(collection(db, `users/${user.uid}/trips`));
-      if (tripSnap.empty) {
-        savedTripsDiv.innerHTML = "<p>No trips saved yet.</p>";
-        return;
-      }
-
-      tripSnap.forEach(docSnap => {
-        const data = docSnap.data();
-        const tripDiv = document.createElement("div");
-        tripDiv.className = "trip-card";
-        tripDiv.innerHTML = `
-          <h3>${data.name}</h3>
-          <p><strong>Days Planned:</strong> ${data.days.length}</p>
-          <button onclick="window.location.href='builder.html?trip=${docSnap.id}'">
-            <i class="fas fa-edit"></i> Edit Trip
-          </button>
-          <button class="export-btn" data-trip='${JSON.stringify(data.days).replace(/'/g, "&apos;")}'>
-            <i class="fas fa-share"></i> Export Trip
-          </button>
-          <button onclick="deleteTrip('${docSnap.id}')">
-            <i class="fas fa-trash-alt"></i> Delete Trip
-          </button>
-        `;
-        savedTripsDiv.appendChild(tripDiv);
-      });
-
-      document.querySelectorAll(".export-btn").forEach(button => {
-        button.addEventListener("click", () => {
-          const data = button.getAttribute("data-trip");
-          if (!data) return;
-
-          try {
-            const parsed = JSON.parse(data.replace(/&apos;/g, "'"));
-            exportTrip(parsed);
-          } catch (e) {
-            alert("❌ Couldn't export trip. Data may be corrupted.");
-            console.error(e);
-          }
         });
-      });
+
+        // Saved trips
+        // Saved trips
+const tripSnap = await getDocs(collection(db, `users/${user.uid}/trips`));
+if (tripSnap.empty) {
+  savedTripsDiv.innerHTML = "<p>No trips saved yet.</p>";
+} else {
+  tripSnap.forEach(docSnap => {
+    const data = docSnap.data();
+    const el = document.createElement("div");
+    el.className = "trip-card";
+    el.innerHTML = `
+      <h3>${data.name || "Unnamed Trip"}</h3>
+      <p style="margin:.25rem 0 .5rem 0;">
+        <strong>Days Planned:</strong> ${Array.isArray(data.days) ? data.days.length : 0}
+      </p>
+      <div style="display:flex; gap:.5rem; flex-wrap:wrap; justify-content:center;">
+        <button class="btn btn-sm" onclick="window.location.href='builder.html?trip=${docSnap.id}'">
+          <i class="fas fa-edit"></i> Edit Trip
+        </button>
+        <button class="btn btn-sm export-btn"
+                data-trip='${JSON.stringify(data.days || []).replace(/'/g, "&apos;")}'>
+          <i class="fas fa-share"></i> Export Trip
+        </button>
+        <button class="btn btn-sm" onclick="deleteTrip('${docSnap.id}')">
+          <i class="fas fa-trash-alt"></i> Delete Trip
+        </button>
+      </div>
+    `;
+    savedTripsDiv.appendChild(el);
+  });
+
+  // Wire export buttons
+  document.querySelectorAll(".export-btn").forEach(btn => {
+    btn.addEventListener("click", () => {
+      const raw = btn.getAttribute("data-trip") || "[]";
+      try {
+        const days = JSON.parse(raw.replace(/&apos;/g, "'"));
+        exportTrip(days);
+      } catch (e) {
+        alert("❌ Couldn't export trip. Data may be corrupted.");
+        console.error(e);
+      }
+    });
+  });
+}
+
+      } catch (err) {
+        console.error(err);
+        document.body.style.display = "block";
+        document.getElementById("mainContent").style.display = "block";
+      }
     });
 
     function updateCountdown(dateStr) {
-      const today = new Date();
+      const today    = new Date();
       const tripDate = new Date(dateStr);
       const diffTime = tripDate - today;
       const daysLeft = Math.ceil(diffTime / (1000 * 60 * 60 * 24));
-      daysUntil.innerHTML = daysLeft > 0
-        ? `<i class="fas fa-sparkles" style="margin-right: 0.4rem;"></i>${daysLeft} day(s) until your next Disney adventure!`
-        : daysLeft === 0
-        ? `<i class="fas fa-party-horn" style="margin-right: 0.4rem;"></i>Today is your trip day!`
-        : `<i class="fas fa-suitcase-rolling" style="margin-right: 0.4rem;"></i>Your selected date has passed.`;
+      daysUntil.innerHTML =
+        daysLeft > 0
+          ? `${daysLeft} day(s) until your next Disney adventure!`
+          : daysLeft === 0
+            ? `Today is your trip day!`
+            : `Your selected date has passed.`;
     }
 
     window.deleteTrip = async function(tripId) {
@@ -308,20 +337,19 @@ document.getElementById("mainContent").style.display = "block";
 
     window.exportTrip = function(days) {
       let text = "🧭 Trip Plan:\n";
-      days.forEach((day, i) => {
-        text += `\nDay ${i + 1}: ${day.park}\n`;
-        day.tasks.forEach(task => {
-          text += `• ${task}\n`;
-        });
+      (days || []).forEach((day, i) => {
+        const park = day?.park || `Day ${i + 1}`;
+        text += `\nDay ${i + 1}: ${park}\n`;
+        (day?.tasks || []).forEach(task => { text += `• ${task}\n`; });
       });
       navigator.clipboard.writeText(text)
         .then(() => alert("📋 Trip copied to clipboard!"))
         .catch(err => alert("Failed to copy: " + err));
     };
-	
-document.getElementById("back-button").addEventListener("click", () => {
-  window.location.href = "home.html";
-});
+
+    document.getElementById("back-button").addEventListener("click", () => {
+      window.location.href = "home.html";
+    });
   </script>
 </body>
 </html>
